# ChronoVest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sectors/: br_ai.yaml  br_technology.yaml  brazil_banks.yaml  brazil_mining_steel.yaml  brazil_utilities_energy.yaml  intl_ai.yaml  intl_banking.yaml  intl_technology.yaml  watchmaking.yaml
examples/: run_brazil_banks.py  run_forecast.py  run_international.py  run_local_br.py  run_watchmaking.py
src/chronovest/: __init__.py  config.py  runner.py
src/chronovest/analytics/: __init__.py  brazil.py  metrics.py
src/chronovest/app/: streamlit_app.py
src/chronovest/data/: __init__.py  _yf_session.py  base.py  brazil_indicators.py  cache.py  currency.py  models.py  yfinance_provider.py
src/chronovest/engine/: __init__.py  portfolio.py  weighting.py
src/chronovest/forecast/: __init__.py  base.py  montecarlo.py  portfolio.py
src/chronovest/universe/: __init__.py  sector.py
src/chronovest/viz/: __init__.py  charts.py
tests/: conftest.py  test_brazil.py  test_currency.py  test_engine.py  test_forecast.py  test_metrics.py  test_provider_session.py  test_runner.py  test_sectors.py  test_weighting.py  test_yfinance_provider.py
