[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronovest"
version = "0.1.0"
description = "Historical sector portfolio backtesting and investment analysis engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "yfinance>=0.2.54",
    "plotly>=5.20",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
app = ["streamlit>=1.33"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "packaging>=24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
